--- a/frontend-js/index.html
+++ b/frontend-js/index.html
@@ -14,7 +14,7 @@
         .chatpanel {
             /* display: none; */
             /* height: 0; */
-            transition: 0.5s;
+            /* transition: 0.5s; */
         }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
@@ -23,8 +23,79 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">Livchat</a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav">
+                    <a href="#" id="profilePg" class="nav-item nav-link active"><i class="fas fa-house-chimney-window"></i></a>
+                </div>
+                <div class="navbar-nav ms-auto">
+                    <ul class="navbar-nav d-flex flex-row me-2">
+                        <li class="nav-item me-1 me-lg-0">
+                            <a type="button" class="nav-link text-white px-2 btn btn-dark" data-bs-toggle="modal" data-bs-target="#liveSearch">
+                                <i class="fas fa-magnifying-glass"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item me-1 me-lg-0">
+                            <a type="button" class="nav-link text-white px-2  btn btn-dark" data-bs-toggle="collapse" data-bs-target="#chatbox">
+                                <i class="far fa-comments"></i>
+                            </a>
+
+                        </li>
+                        <li class="nav-item me-1 me-lg-0">
+                            <a type="button" class="nav-link text-white px-2 btn btn-dark" id="profile" href="/profile"><i class="fas fa-user mx-1"></i></a>
+                        </li>
+                    </ul>
+
+                    <!-- Search panel -->
+
+
+                    <div class="modal fade" id="liveSearch" tabindex="-1" aria-labelledby="liveSearch" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <div id="search-container" class="modal-body d-flex">
+                                    <div class="flex-grow-1">
+                                        <input class="rounded w-100 p-2" type="search" id="search-bar" placeholder="Search posts..." />
+                                        <div class="mt-3" id="results-container">
+                                            <div class="p-2 border-bottom bg-light">
+                                                <a href="#" class="d-block">Post title2</a>
+                                                <!-- <small><a href="#" class="d-block">Username2</a></small> -->
+                                            </div>
+                                            <div class="p-2 border-bottom bg-light">
+                                                <a href="#" class="d-block">Post title3</a>
+                                                <!-- <small><a href="#" class="d-block">Username2</a></small> -->
+                                            </div>
+                                        </div>
+                                        <p class="d-none" id="unavailTxt">No matching posts found.</p>
+                                    </div>
+                                    <div class=" flex-shrink-0 ms-2 mt-2">
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Search Modal -->
+
+
+                    <div class="d-flex align-items-center">
+                        <a role="button" href="/postpage" id="createPost" class="btn btn-success me-3">Create post</a>
+                        <a role="button" href="/signout" id="logout" class="btn btn-secondary me-3">Log out</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+    <!-- onclick="myFunc()" -->
     <p class="text-center">Yellow</p>
-    <button type="button" class="btn btn-info" id="togglechat" onclick="myFunc()">Chat box</button>
+    <a type="button" class="btn btn-dark" id="togglechat" data-bs-toggle="collapse" data-bs-target="#chatbox">Chat box</a>
     <!-- Large modal -->
     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">Large modal</button>
     <main class="px-5">
@@ -95,7 +166,7 @@
 
     <!-- <div class="row d-flex justify-content-center"> -->
 
-    <div class="col-md-8 col-lg-6 col-xl-4 w-50 border" style="width:0; position: absolute; bottom:0; left: 0">
+    <div class="col-md-8 col-lg-6 col-xl-4 w-50 border" style="display: none; width:0; position: absolute; bottom:0; left: 0">
 
         <div class="card overflow-auto">
 
@@ -228,7 +299,7 @@
 
             </div>
 
-            <div class="card-footer text-muted d-flex justify-content-start align-items-center p-3" style="background-color: #f5f6f7; position: absolute; bottom: 0; z-index: 1">
+            <div class="card-footer text-muted d-flex justify-content-start align-items-center p-3" style="background-color: #f5f6f7; width: 100%; position: sticky; bottom: 0; z-index: 2">
 
                 <div class="input-group mb-0">
 
@@ -259,7 +330,7 @@
 
     <!-- <div class="row d-flex justify-content-center w-50" style="position: absolute; bottom:0; right: 0"> -->
 
-    <div class="col-sm-6 col-md-5 col-lg-5 col-xl-4 border chatpanel" id="chatbox" style="position: absolute; bottom:0; right: 0;">
+    <div class="col-sm-6 col-md-5 col-lg-5 col-xl-4 chatpanel collapse multi-collapse" id="chatbox" style="position: fixed; bottom:0; right: 0;">
 
         <div class="card overflow-auto">
 
@@ -267,110 +338,169 @@
 
                 <h5 class="mb-0">Chat messages</h5>
 
+
                 <div class="d-flex flex-row align-items-center">
 
-                    <span class="badge me-3" style="background-color: #008080;">#</span>
+                    <span class="badge me-3" id="count" style="background-color: #008080;">#</span>
 
-                    <i class="fas fa-minus me-3 text-muted fa-xs"></i>
+                    <!-- <i class="fas fa-minus me-3 text-muted fa-xs"></i>
 
                     <i class="fas fa-comments me-3 text-muted fa-xs"></i>
 
                     <i class="fas fa-times text-muted fa-xs" onclick="closeChat"></i>
+                     -->
+                    <button type="button" class="btn-close" data-bs-toggle="collapse" data-bs-target="#chatbox"></button>
+                    <div class="type" style="font-size: x-small; position: absolute; left: 5%; bottom: 0; color: #008080;"><i class="text-mute">Someone is typing...</i></div>
+
 
                 </div>
 
             </div>
 
-            <div class="card-body border" data-mdb-perfect-scrollbar="true" style="position: relative; height: 30em">
+            <div class="card-body" data-mdb-perfect-scrollbar="true" style="position: relative; height: 31em">
+
+                <div id="messages">
+                    <div class="d-flex flex-row justify-content-start  mt-2">
+
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+                        <div>
+
+                            <div class="small p-2 ms-2 mb-2 rounded-3" style="background-color: #f5f6f7;">
+                                <p class="small mb-1">Timona Siera</p>
+                                <p class="mb-1">For what reason would it be advisable for me to think about business content?
+                                </p>
+                                <p class="small mb-1 text-muted text-end">Jan 23, 2:00 pm</p>
+                            </div>
 
 
-                <div class="d-flex flex-row justify-content-start  mt-2">
+                        </div>
 
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+                    </div>
+                    <div class="d-flex flex-row justify-content-end  mt-2">
 
-                    <div>
+                        <div>
 
-                        <div class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">
-                            <p class="small mb-1">Timona Siera</p>
-                            <p class="mb-1">For what reason would it be advisable for me to think about business content?
-                            </p>
-                            <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                            <div class="small p-2 mx-2 mb-2 rounded-3 text-white" style="background-color: #008080;">
+                                <p class="small mb-1">Johny Bullock</p>
+                                <p class="mb-1">You could believe whatever in the world you want for all I care. Anyways, thank you for your believe in our supports
+
+                                </p>
+                                <p class="small mb-1 text-end" style="color:#aeb1b0">23 Jan 2:00 pm</p>
+                            </div>
+
+
+                        </div>
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+
+
+
+                    </div>
+                    <div class="d-flex flex-row justify-content-start  mt-2">
+
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+                        <div>
+
+                            <div class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">
+                                <p class="small mb-1">Timona Siera</p>
+                                <p class="mb-1">For what reason would it be advisable for me to think about business content?
+                                </p>
+                                <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                            </div>
+
+
                         </div>
 
 
                     </div>
+                    <div class="d-flex flex-row justify-content-start  mt-2">
 
-                </div>
-                <div class="d-flex flex-row justify-content-end  mt-2">
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
 
-                    <div>
+                        <div>
 
-                        <div class="small p-2 ms-3 mb-3 rounded-3 text-white" style="background-color: #008080;">
-                            <p class="small mb-1">Johny Bullock</p>
-                            <p class="mb-1">You could believe whatever in the world you want for all I care. Anyways, thank you for your believe in our supports
+                            <div class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">
+                                <p class="small mb-1">Timona Siera</p>
+                                <p class="mb-1">For what reason would it be advisable for me to think about business content?
+                                </p>
+                                <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                            </div>
 
-                            </p>
-                            <p class="small mb-1 text-end" style="color:#aeb1b0">23 Jan 2:00 pm</p>
+
                         </div>
 
 
                     </div>
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+                    <div class="d-flex flex-row justify-content-start  mt-2">
+
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+                        <div>
+
+                            <div class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">
+                                <p class="small mb-1">Timona Siera</p>
+                                <p class="mb-1">For what reason would it be advisable for me to think about business content?
+                                </p>
+                                <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                            </div>
 
 
-
-
-                </div>
-                <div class="d-flex flex-row justify-content-start  mt-2">
-
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
-
-                    <div>
-
-                        <div class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">
-                            <p class="small mb-1">Timona Siera</p>
-                            <p class="mb-1">For what reason would it be advisable for me to think about business content?
-                            </p>
-                            <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
                         </div>
 
 
                     </div>
+                    <div class="d-flex flex-row justify-content-start  mt-2">
+
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+                        <div>
+
+                            <div class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">
+                                <p class="small mb-1">Timona Siera</p>
+                                <p class="mb-1">For what reason would it be advisable for me to think about business content?
+                                </p>
+                                <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                            </div>
 
 
-                </div>
-                <div class="d-flex flex-row justify-content-end  mt-2">
-
-                    <div>
-
-                        <div class="small p-2 ms-3 mb-3 rounded-3 text-white" style="background-color: #008080;">
-                            <p class="small mb-1">Johny Bullock</p>
-                            <p class="mb-1">Thank you for your believe in our supports
-
-                            </p>
-                            <p class="small mb-1 text-end" style="color:#aeb1b0">23 Jan 2:00 pm</p>
                         </div>
 
 
                     </div>
+                    <div class="d-flex flex-row justify-content-end  mt-2">
+
+                        <div>
+
+                            <div class="small p-2 ms-3 mb-3 rounded-3 text-white" style="background-color: #008080;">
+                                <p class="small mb-1">Johny Bullock</p>
+                                <p class="mb-1">Thank you for your believe in our supports
+
+                                </p>
+                                <p class="small mb-1 text-end" style="color:#aeb1b0">23 Jan 2:00 pm</p>
+                            </div>
 
 
+                        </div>
+
+
+                    </div>
                 </div>
 
-                <div class="card-footer text-muted d-flex justify-content-start align-items-center p-3 border" style="background-color: #f5f6f7; position:sticky; bottom:0; z-index: 2;">
+                <div class="card-footer text-muted d-flex justify-content-start align-items-center border" style="background-color: #f5f6f7; position:sticky; bottom:0; z-index: 2;">
 
                     <div class="input-group mb-0">
 
-                        <input type="text" class="form-control" placeholder="Type message" aria-label="Recipient's username" aria-describedby="button-addon2" />
+                        <input type="text" class="form-control " placeholder="Type message" aria-label="Recipient's username" aria-describedby="button-addon2" />
 
-                        <button class="btn btn-secondary" type="button" id="button-addon2" style="padding-top: .55rem;">
+                        <button class="btn btn-secondary" type="button" id="button-addon2">
         
                         Send
         
                       </button>
 
                     </div>
-
                 </div>
 
             </div>
@@ -383,19 +513,19 @@
 
 
     <script>
-        const chatBox = document.getElementById('chatbox');
-        const button = document.getElementById('togglechat');
+        // const chatBox = document.getElementById('chatbox');
+        // const button = document.getElementById('togglechat');
 
-        function myFunc() {
-            console.log("clicked");
-            // chatBox.classList.toggle('chatpanel');
-            chatBox.style.height = "500px";
-        }
+        // function myFunc() {
+        //     console.log("clicked");
+        //     // chatBox.classList.toggle('chatpanel');
+        //     chatBox.style.height = "500px";
+        // }
 
-        function closeChat() {
-            console.log("Close chat");
-            chatBox.style.height = "0px";
-        }
+        // function closeChat() {
+        //     console.log("Close chat");
+        //     chatBox.style.height = "0px";
+        // }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
