--- a/frontend-js/index.html
+++ b/frontend-js/index.html
@@ -322,9 +322,9 @@
 
     <!-- <div class="row d-flex justify-content-center w-50" style="position: absolute; bottom:0; right: 0"> -->
 
-    <div class="col-sm-6 col-md-5 col-lg-5 col-xl-4 chatpanel collapse multi-collapse" id="chatbox" style="position: fixed; bottom:0; right: 0;">
+    <div class="col-sm-8 col-md-5 col-lg-4 chatpanel collapse multi-collapse" id="chatbox" style="position: fixed; bottom:0; right: 1%;">
 
-        <div class="card overflow-auto">
+        <div class="card">
 
             <div class="card-header d-flex justify-content-between align-items-center p-3" style="background-color: #f5f6f7; border-top: 4px solid #008080; position:sticky; top:0; z-index: 2;">
 
@@ -335,13 +335,7 @@
 
                     <span class="badge me-3" id="count" style="background-color: #008080;">#</span>
 
-                    <!-- <i class="fas fa-minus me-3 text-muted fa-xs"></i>
-
-                    <i class="fas fa-comments me-3 text-muted fa-xs"></i>
-
-                    <i class="fas fa-times text-muted fa-xs" onclick="closeChat"></i>
-                     -->
-                    <button type="button" class="btn-close" data-bs-toggle="collapse" data-bs-target="#chatbox"></button>
+                    <button type="button" class="btn-close small" data-bs-toggle="collapse" data-bs-target="#chatbox"></button>
                     <div class="type" style="font-size: x-small; position: absolute; left: 5%; bottom: 0; color: #008080;"><i class="text-mute">Someone is typing...</i></div>
 
 
@@ -349,17 +343,122 @@
 
             </div>
 
-            <div class="card-body border" data-mdb-perfect-scrollbar="true" style="position: relative; height: 31em">
+            <div class="card-body border border-success p-0 pb-0" data-mdb-perfect-scrollbar="true" style="height: 31em; overflow: auto;">
 
-                <div id="messages">
+                <div id="messages" class="border border-primary m-2 mb-">
+
+                    <div class="d-flex flex-row justify-content-start  mt-2">
+
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+                        <div>
+
+                            <div class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">
+                                <p class="small mb-1">Timona Siera</p>
+                                <p class="mb-1">For what reason would it be advisable for me to think about business content?
+                                </p>
+                                <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+                    <div class="d-flex flex-row justify-content-end  mt-2">
+
+                        <div>
+
+                            <div class="small p-2 ms-3 mb-3 rounded-3 text-white" style="background-color: #8fbc8f;">
+                                <p class="small mb-1">Johny Bullock</p>
+                                <p class="mb-1">You could believe whatever in the world you want for all I care. Anyways, thank you for your believe in our supports
+
+                                </p>
+                                <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                            </div>
+
+
+                        </div>
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+
+
+
+                    </div>
+                    <div class="d-flex flex-row justify-content-start  mt-2">
+
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+                        <div>
+
+                            <div class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">
+                                <p class="small mb-1">Timona Siera</p>
+                                <p class="mb-1">For what reason would it be advisable for me to think about business content?
+                                </p>
+                                <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                            </div>
+
+
+                        </div>
+
+
+                    </div>
+                    <div class="d-flex flex-row justify-content-end  mt-2">
+
+                        <div>
+
+                            <div class="small p-2 ms-3 mb-3 rounded-3 text-white" style="background-color: #8fbc8f;">
+                                <p class="small mb-1">Johny Bullock</p>
+                                <p class="mb-1">Thank you for your believe in our supports
+
+                                </p>
+                                <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                            </div>
+
+
+                        </div>
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+
+
+
+                    </div>
+                    <div class="d-flex justify-content-between">
+
+                        <p class="small mb-1">Timona Siera</p>
+
+                        <p class="small mb-1 text-muted">23 Jan 2:00 pm</p>
+
+                    </div>
+
+                    <div class="d-flex justify-content-between">
+
+                        <p class="small mb-1 text-muted">23 Jan 2:05 pm</p>
+
+                        <p class="small mb-1">Johny Bullock</p>
+
+                    </div>
+
+                    <div class="d-flex flex-row justify-content-end mb-4 pt-1  mt-3">
+
+                        <div>
+
+                            <p class="small p-2 me-3 mb-3 text-white rounded-3" style="background-color: #8fbc8f;">Thank you for your believe in our supports
+
+                            </p>
+
+                        </div>
+
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+                    </div>
 
                 </div>
 
-                <div class="card-footer text-muted d-flex justify-content-start align-items-center border" style="background-color: #f5f6f7; position:absolute;width:93%; bottom:0; right:3%; z-index: 2;">
+                <div class="card-footer border border-danger text-muted mx-2 align-items-center" style="background-color: #f5f6f7; position:absolute;width:95%; bottom:0; z-index: 2;">
 
                     <div class="input-group mb-0">
 
-                        <input type="text" class="form-control " placeholder="Type message" aria-label="Recipient's username" aria-describedby="button-addon2" />
+                        <input type="text" class="form-control" placeholder="Type message" aria-label="Recipient's username" />
 
                         <button class="btn btn-secondary" type="button" id="button-addon2">
         
